<resources>
    <string name="app_name">Homework_21</string>
    <string name="homework_21">Homework 21</string>
    <string name="counter">counter</string>
    <string name="form">form</string>
    <string name="days">Days</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
</resources>
