<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/homework_21"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/button_counter"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_counter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/counter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_form"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/form"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_counter"
        app:layout_constraintEnd_toStartOf="@id/button_days"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_days"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/button_form"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/days"/>

</androidx.constraintlayout.widget.ConstraintLayout>